--- a/css file/account.css
+++ b/css file/account.css
@@ -2,6 +2,13 @@
     padding: 0;
     margin: 0;
 }
+.account-title{
+    font-size: 35px;
+    text-align: center;
+    margin-top: 20px;
+    padding-bottom: 15px;
+    color: rgb(58, 174, 174);
+}
 .container{
     max-width: 1000px;
     margin: 0 auto;
@@ -12,6 +19,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 150px;
 }
+/* add balance and withdraw box style */
 .deposit-add{
     width:200 px;
     height: 120px;
