--- a/css file/account.css
+++ b/css file/account.css
@@ -26,6 +26,7 @@
     background-color: rgb(209, 88, 8);
     padding: 10px;
     border-radius: 5px;
+    margin-bottom: 10px;
 }
 .deposit-add h3{
     font-size: 35px;
@@ -44,6 +45,7 @@
     background-color: rgb(4, 90, 50);
     padding: 10px;
     border-radius: 5px;
+    margin-bottom: 10px;
 }
 .withdraw-add h3{
     font-size: 35px;
@@ -62,6 +64,7 @@
     background-color: crimson;
     padding: 10px;
     border-radius: 5px;
+    margin-bottom: 10px;
 }
 .main-balance-add h3{
     font-size: 35px;
@@ -95,7 +98,7 @@
     border-radius: 5px;
     outline: none;
 }
-.deposit-btn{
+.deposit-btn {
     font-size: 20px;
     background-color: crimson;
     border: 0;
@@ -109,4 +112,27 @@
     font-size: 30px;
     color: white;
 
+}
+
+/* resposive  */
+@media (max-width: 576px){
+    .box{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-column-gap: 150px;
+    }
+    .balane-add-input{
+        grid-column-gap: 20px;
+    }
+    .deposit-input{
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+    }
+    .deposit-btn{
+        margin-top: 5px;
+    }
+    .deposit-title{
+        font-size: 20px;
+    }
 }
